# discord_bot

./: .env.example  .gitignore  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt  setup.py
cogs/: __init__.py  template_cog.py  whois_cog.py
tests/: test_whois_cog.py
